--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,9 @@ dependencies:
   quickalert: ^0.0.2
   provider: ^6.0.3
   cloud_firestore: ^3.4.6
+  wakelock: ^0.6.2
+  intl: ^0.17.0
+  rxdart: ^0.27.5
 
 dev_dependencies:
   flutter_test:
